--- a/public/ws-client/index.html
+++ b/public/ws-client/index.html
@@ -21,7 +21,7 @@
     <h1>Client <span id="clientId"></span></h1>
 
     <div>
-        <b>Add event</b>
+        <b>Create an event reminder</b>
         <div class="form-control">
             <label>Name:</label>
             <input id="event-name" type="text" placeholder="Enter event name..." />
